src/snapshots/templates__test__escaped_parens.snap
---
source: src/main.rs
assertion_line: 153
expression: "Hello {{ name }}, good to meet you"

---
[
    Text(
        "Hello { name }, good to meet you",
    ),
]
