src/snapshots/templates__test__parse_builder_block.snap
---
source: src/main.rs
assertion_line: 1201
expression: "Hello {[ name ]}, good to meet you"

---
[
    Text(
        "Hello ",
    ),
    Builder(
        "name",
    ),
    Text(
        ", good to meet you",
    ),
]
