src/snapshots/templates__test__parse_dot_access.snap
---
source: src/main.rs
assertion_line: 606
expression: "Hello{% if user.is_admin %} Admin{% endif %}"

---
[
    Text(
        "Hello",
    ),
    If(
        "user.is_admin",
        [
            Text(
                " Admin",
            ),
        ],
        [],
    ),
]
