src/snapshots/templates__test__parse_empty_if_statement.snap
---
source: src/main.rs
assertion_line: 493
expression: "Hello {% if is_user %}{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [],
        [],
    ),
]
