src/snapshots/templates__test__parse_escaped_parens.snap
---
source: src/main.rs
assertion_line: 201
expression: "Hello {{ name }}, good to meet you"

---
[
    Text(
        "Hello { name }, good to meet you",
    ),
]
