src/snapshots/templates__test__parse_for_loop_with_single_identifier.snap
---
source: src/main.rs
assertion_line: 681
expression: "Hello {% for item in list %}{{ item }}{% endfor %}"

---
[
    Text(
        "Hello ",
    ),
    For(
        "item",
        "list",
        [
            Identifier(
                "item",
            ),
        ],
    ),
]
