src/snapshots/templates__test__parse_if_else_statement.snap
---
source: src/main.rs
assertion_line: 498
expression: "Hello {% if is_user %}User{% else %}Unknown{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    If(
        "is_user",
        [
            Text(
                "User",
            ),
        ],
        [
            Text(
                "Unknown",
            ),
        ],
    ),
]
